// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders with customStyle 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="__reakit-focus-trap"
    style="position: fixed;"
    tabindex="0"
  />
  .cache-u8dom6-StyledDialogBackdrop-customDialogBackdropStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow: auto;
  padding: 16px;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  opacity: 1;
  background-color: #4A4F62A6;
  background-color: aliceblue;
}

.cache-1ikjhs4-StyledDialog-customDialogStyles {
  background-color: #ffffff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 32px;
  margin: auto;
  width: 616px;
  min-height: initial;
  box-shadow: 0px 8px 40px 10px #151A2D5C;
  opacity: 1;
  background: radial-gradient(circle, #8b2fe6 0%, #4f0599 50%, #30015a 100%);
}

.cache-1ikjhs4-StyledDialog-customDialogStyles::before {
  content: '';
  height: 100%;
  width: 100%;
}

.cache-v3mj59-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  position: absolute;
  top: 16px;
  right: 16px;
  left: 16px;
}

.cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1tocl8q-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #4a4f62;
}

.cache-1tocl8q-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1tocl8q-StyledGhostButton:hover,
.cache-1tocl8q-StyledGhostButton:active {
  background: #e6e9f0;
  color: #4a4f62;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="__reakit-portal"
  >
    <div
      class="cache-u8dom6-StyledDialogBackdrop-customDialogBackdropStyles e1x6rvve2"
      data-dialog-ref="id-d9i348"
    >
      <div
        aria-label="modal"
        aria-modal="true"
        class="cache-1ikjhs4-StyledDialog-customDialogStyles e1x6rvve1"
        data-dialog="true"
        id="id-d9i348"
        role="dialog"
        tabindex="0"
      >
        <div>
          test
        </div>
        <div
          class="cache-v3mj59-StyledContainer e1x6rvve0"
        >
          <div
            aria-describedby=":r2:"
            class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
            tabindex="0"
          >
            <button
              aria-label="close"
              class="cache-1tocl8q-StyledGhostButton em6gco80"
              type="button"
            >
              <svg
                class="cache-kbjega-StyledIcon-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="__reakit-focus-trap"
    style="position: fixed;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Modal renders with default Props 1`] = `
<DocumentFragment>
  .cache-16xmv7g-StyledDialogBackdrop {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow: auto;
  padding: 16px;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  opacity: 1;
  background-color: #4A4F62A6;
}

.cache-lw1g3t-StyledDialog {
  background-color: #ffffff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 32px;
  margin: auto;
  width: 616px;
  min-height: initial;
  box-shadow: 0px 8px 40px 10px #151A2D5C;
  opacity: 1;
}

.cache-lw1g3t-StyledDialog::before {
  content: '';
  height: 100%;
  width: 100%;
}

.cache-v3mj59-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  position: absolute;
  top: 16px;
  right: 16px;
  left: 16px;
}

.cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1tocl8q-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #4a4f62;
}

.cache-1tocl8q-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1tocl8q-StyledGhostButton:hover,
.cache-1tocl8q-StyledGhostButton:active {
  background: #e6e9f0;
  color: #4a4f62;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="__reakit-portal"
  >
    <div
      class="cache-16xmv7g-StyledDialogBackdrop e1x6rvve2"
      data-dialog-ref="id-d9i348"
      hidden=""
      style="display: none;"
    >
      <div
        aria-label="modal"
        aria-modal="true"
        class="cache-lw1g3t-StyledDialog e1x6rvve1"
        data-dialog="true"
        hidden=""
        id="id-d9i348"
        role="dialog"
        style="display: none;"
        tabindex="0"
      >
        <div
          class="cache-v3mj59-StyledContainer e1x6rvve0"
        >
          <div
            aria-describedby=":r0:"
            class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
            tabindex="0"
          >
            <button
              aria-label="close"
              class="cache-1tocl8q-StyledGhostButton em6gco80"
              type="button"
            >
              <svg
                class="cache-kbjega-StyledIcon-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal renders with disclosure 1`] = `
<DocumentFragment>
  <button
    aria-controls="modal-test"
    aria-expanded="false"
    aria-haspopup="dialog"
    type="button"
  >
    Test
  </button>
  .cache-16xmv7g-StyledDialogBackdrop {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow: auto;
  padding: 16px;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  opacity: 1;
  background-color: #4A4F62A6;
}

.cache-lw1g3t-StyledDialog {
  background-color: #ffffff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 32px;
  margin: auto;
  width: 616px;
  min-height: initial;
  box-shadow: 0px 8px 40px 10px #151A2D5C;
  opacity: 1;
}

.cache-lw1g3t-StyledDialog::before {
  content: '';
  height: 100%;
  width: 100%;
}

.cache-v3mj59-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  position: absolute;
  top: 16px;
  right: 16px;
  left: 16px;
}

.cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1tocl8q-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #4a4f62;
}

.cache-1tocl8q-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1tocl8q-StyledGhostButton:hover,
.cache-1tocl8q-StyledGhostButton:active {
  background: #e6e9f0;
  color: #4a4f62;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="__reakit-portal"
  >
    <div
      class="cache-16xmv7g-StyledDialogBackdrop e1x6rvve2"
      data-dialog-ref="modal-test"
      hidden=""
      style="display: none;"
    >
      <div
        aria-label="modal-test"
        aria-modal="true"
        class="cache-lw1g3t-StyledDialog e1x6rvve1"
        data-dialog="true"
        hidden=""
        id="modal-test"
        role="dialog"
        style="display: none;"
        tabindex="0"
      >
        <div
          class="cache-v3mj59-StyledContainer e1x6rvve0"
        >
          <div
            aria-describedby=":r3:"
            class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
            tabindex="0"
          >
            <button
              aria-label="close"
              class="cache-1tocl8q-StyledGhostButton em6gco80"
              type="button"
            >
              <svg
                class="cache-kbjega-StyledIcon-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal renders with disclosure and onBeforeClose 1`] = `
<DocumentFragment>
  <button
    aria-controls="modal-test"
    aria-expanded="false"
    aria-haspopup="dialog"
    type="button"
  >
    Test modal-test
  </button>
  <div
    aria-hidden="true"
    class="__reakit-focus-trap"
    style="position: fixed;"
    tabindex="0"
  />
  .cache-16xmv7g-StyledDialogBackdrop {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow: auto;
  padding: 16px;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  opacity: 1;
  background-color: #4A4F62A6;
}

.cache-lw1g3t-StyledDialog {
  background-color: #ffffff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 32px;
  margin: auto;
  width: 616px;
  min-height: initial;
  box-shadow: 0px 8px 40px 10px #151A2D5C;
  opacity: 1;
}

.cache-lw1g3t-StyledDialog::before {
  content: '';
  height: 100%;
  width: 100%;
}

.cache-v3mj59-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  position: absolute;
  top: 16px;
  right: 16px;
  left: 16px;
}

.cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1tocl8q-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #4a4f62;
}

.cache-1tocl8q-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1tocl8q-StyledGhostButton:hover,
.cache-1tocl8q-StyledGhostButton:active {
  background: #e6e9f0;
  color: #4a4f62;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="__reakit-portal"
  >
    <div
      class="cache-16xmv7g-StyledDialogBackdrop e1x6rvve2"
      data-dialog-ref="modal-test"
      style=""
    >
      <div
        aria-label="modal-test"
        aria-modal="true"
        class="cache-lw1g3t-StyledDialog e1x6rvve1"
        data-dialog="true"
        data-testid="test"
        id="modal-test"
        role="dialog"
        style=""
        tabindex="0"
      >
        <div>
          modal
        </div>
        <div
          class="cache-v3mj59-StyledContainer e1x6rvve0"
        >
          <div
            aria-describedby=":r4:"
            class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
            tabindex="0"
          >
            <button
              aria-label="close"
              class="cache-1tocl8q-StyledGhostButton em6gco80"
              data-testid="test-close-button"
              type="button"
            >
              <svg
                class="cache-kbjega-StyledIcon-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="__reakit-focus-trap"
    style="position: fixed;"
    tabindex="0"
  />
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 0px, 0);
    -moz-transform: translate3d(0px, 0px, 0);
    -ms-transform: translate3d(0px, 0px, 0);
    transform: translate3d(0px, 0px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }
}

.cache-1knqcpt-StyledTooltip-StyledTooltip {
  background: #4a4f62;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  -webkit-transform: translate3d(0px, 12px, 0);
  -moz-transform: translate3d(0px, 12px, 0);
  -ms-transform: translate3d(0px, 12px, 0);
  transform: translate3d(0px, 12px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
}

.cache-1knqcpt-StyledTooltip-StyledTooltip::after {
  content: ' ';
  position: absolute;
  top: -13px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #4a4f62 transparent transparent transparent;
  pointer-events: none;
}

<div
    class="cache-1knqcpt-StyledTooltip-StyledTooltip ep3agpf1"
    id=":r4:"
    role="tooltip"
  >
    close
  </div>
</DocumentFragment>
`;

exports[`Modal renders with opened={true} 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="__reakit-focus-trap"
    style="position: fixed;"
    tabindex="0"
  />
  .cache-16xmv7g-StyledDialogBackdrop {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow: auto;
  padding: 16px;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  opacity: 1;
  background-color: #4A4F62A6;
}

.cache-lw1g3t-StyledDialog {
  background-color: #ffffff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 32px;
  margin: auto;
  width: 616px;
  min-height: initial;
  box-shadow: 0px 8px 40px 10px #151A2D5C;
  opacity: 1;
}

.cache-lw1g3t-StyledDialog::before {
  content: '';
  height: 100%;
  width: 100%;
}

.cache-v3mj59-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  position: absolute;
  top: 16px;
  right: 16px;
  left: 16px;
}

.cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1tocl8q-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #4a4f62;
}

.cache-1tocl8q-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1tocl8q-StyledGhostButton:hover,
.cache-1tocl8q-StyledGhostButton:active {
  background: #e6e9f0;
  color: #4a4f62;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="__reakit-portal"
  >
    <div
      class="cache-16xmv7g-StyledDialogBackdrop e1x6rvve2"
      data-dialog-ref="id-d9i348"
    >
      <div
        aria-label="modal"
        aria-modal="true"
        class="cache-lw1g3t-StyledDialog e1x6rvve1"
        data-dialog="true"
        id="id-d9i348"
        role="dialog"
        tabindex="0"
      >
        <div>
          test
        </div>
        <div
          class="cache-v3mj59-StyledContainer e1x6rvve0"
        >
          <div
            aria-describedby=":r1:"
            class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
            tabindex="0"
          >
            <button
              aria-label="close"
              class="cache-1tocl8q-StyledGhostButton em6gco80"
              type="button"
            >
              <svg
                class="cache-kbjega-StyledIcon-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="__reakit-focus-trap"
    style="position: fixed;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Modal renders with portal node (modal=false) 1`] = `
<DocumentFragment>
  .cache-16xmv7g-StyledDialogBackdrop {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow: auto;
  padding: 16px;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  opacity: 1;
  background-color: #4A4F62A6;
}

.cache-lw1g3t-StyledDialog {
  background-color: #ffffff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 32px;
  margin: auto;
  width: 616px;
  min-height: initial;
  box-shadow: 0px 8px 40px 10px #151A2D5C;
  opacity: 1;
}

.cache-lw1g3t-StyledDialog::before {
  content: '';
  height: 100%;
  width: 100%;
}

.cache-v3mj59-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  position: absolute;
  top: 16px;
  right: 16px;
  left: 16px;
}

.cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1tocl8q-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #4a4f62;
}

.cache-1tocl8q-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1tocl8q-StyledGhostButton:hover,
.cache-1tocl8q-StyledGhostButton:active {
  background: #e6e9f0;
  color: #4a4f62;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-16xmv7g-StyledDialogBackdrop e1x6rvve2"
    data-dialog-ref="modal-test"
    hidden=""
    style="display: none;"
  >
    <div
      aria-label="modal-test"
      class="cache-lw1g3t-StyledDialog e1x6rvve1"
      data-dialog="true"
      hidden=""
      id="modal-test"
      role="dialog"
      style="display: none;"
      tabindex="0"
    >
      <div
        class="cache-v3mj59-StyledContainer e1x6rvve0"
      >
        <div
          aria-describedby=":r5:"
          class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
          tabindex="0"
        >
          <button
            aria-label="close"
            class="cache-1tocl8q-StyledGhostButton em6gco80"
            type="button"
          >
            <svg
              class="cache-kbjega-StyledIcon-sizeStyles etwatq50"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
